--- a/slider-animated-gsap/index.html
+++ b/slider-animated-gsap/index.html
@@ -27,7 +27,7 @@
             align-items: center;
             will-change: transform;
 
-            /* NOVO: padding para inicio e final */
+            
             padding-left: 30vw;
             padding-right: 30vw;
         }
@@ -91,7 +91,7 @@
         </div>
     </div>
 
-    <!-- Scripts GSAP + ScrollTrigger -->
+    <!-- Scripts GSAP e ScrollTrigger -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script>
