--- a/slider-animated-gsap/index.html
+++ b/slider-animated-gsap/index.html
@@ -27,14 +27,14 @@
             align-items: center;
             will-change: transform;
 
-            
+
             padding-left: 30vw;
             padding-right: 30vw;
         }
 
         .slide {
             position: relative;
-            margin: 0 15px;
+            margin: 0 5px;
             flex: 0 0 auto;
             overflow: hidden;
             border-radius: 12px;
@@ -68,7 +68,7 @@
             <div class="slide"><img src="https://img.freepik.com/fotos-gratis/doca-de-madeira-marrom_198523-110.jpg"
                     alt="Montanha e lago" /></div>
             <div class="slide"><img
-                    src="https://img.freepik.com/fotos-gratis/prado-com-arvores-e-uma-cerca-de-madeira_1160-287.jpg"
+                    src="https://img.freepik.com/fotos-gratis/campo-de-grama-marrom-sob-o-ceu-preto-durante-a-noite_198169-398.jpg?uid=R87926345&ga=GA1.1.407330938.1746885944&semt=ais_hybrid&w=740"
                     alt="Rio e floresta" /></div>
             <div class="slide"><img
                     src="https://img.freepik.com/fotos-gratis/paisagem-paisagem-pico-colina-famosa_1417-42.jpg"
@@ -80,10 +80,10 @@
                     src="https://img.freepik.com/fotos-gratis/umido-vietnam-montanha-fluxo-fluxo-rural_1417-1357.jpg"
                     alt="Lago turquesa" /></div>
             <div class="slide"><img
-                    src="https://img.freepik.com/fotos-gratis/foto-vertical-de-uma-passagem-de-madeira-sobre-um-pequeno-lago-reflexivo-e-uma-cadeia-de-montanhas-no-horizonte_181624-37099.jpg"
+                    src="https://img.freepik.com/fotos-gratis/paisagem-de-outono-da-estrada-florestal_23-2151843640.jpg?uid=R87926345&ga=GA1.1.407330938.1746885944&semt=ais_hybrid&w=740"
                     alt="Lago turquesa" /></div>
             <div class="slide"><img
-                    src="https://img.freepik.com/fotos-gratis/foto-de-paisagem-de-colinas-verdes-em-val-d-orcia-toscana-italia-em-um-ceu-sombrio_181624-10544.jpg"
+                    src="https://img.freepik.com/fotos-gratis/velho-conceito-de-cidade-ocidental_23-2150527846.jpg?uid=R87926345&ga=GA1.1.407330938.1746885944&semt=ais_hybrid&w=740"
                     alt="Lago turquesa" /></div>
             <div class="slide"><img
                     src="https://img.freepik.com/fotos-gratis/ponte-de-madeira-em-um-campo-com-um-lago-durante-o-por-do-sol-em-portugal_181624-10560.jpg?uid=R87926345&ga=GA1.1.407330938.1746885944&semt=ais_hybrid&w=740"
